Add more metrics.

--- a/src/main/resources/template/report-js.html
+++ b/src/main/resources/template/report-js.html
@@ -118,6 +118,18 @@
           <td class="name">Average Public Methods per Class</td>
           <td class="value"></td>
         </tr>
+        <tr>
+          <td class="name">Average LCOM4</td>
+          <td class="value"></td>
+        </tr>
+        <tr>
+          <td class="name">Share of Getters/Setters</td>
+          <td class="value"></td>
+        </tr>
+        <tr>
+          <td class="name">Share of methods with local calls</td>
+          <td class="value"></td>
+        </tr>
       </table>
       <canvas id="" width="550" height="550"></canvas>
     </template>
@@ -158,6 +170,9 @@
         td[11].textContent = d.distance.toFixed(2);
         td[13].textContent = d.averageMethodsPerClass.toFixed(2);
         td[15].textContent = d.averagePublicMethodsPerClass.toFixed(2);
+        td[17].textContent = d.lcom4.toFixed(2);
+        td[19].textContent = (d.shareGetterSetters * 100).toFixed(2) + "%";
+        td[21].textContent = (d.shareLocalCallMethods * 100).toFixed(2) + "%";
 
         let title = clone.querySelectorAll('h2')
         title[0].textContent = d.name;
