--- a/src/main/resources/template/report-js.html
+++ b/src/main/resources/template/report-js.html
@@ -52,11 +52,15 @@
 
         ctx.beginPath()
         ctx.lineWidth = 2
-        ctx.arc(50, 500, 150, 1.5 * Math.PI, 2 * Math.PI)
+        ctx.arc(50, 500, 200, 1.5 * Math.PI, 2 * Math.PI)
         ctx.stroke()
 
         ctx.font = '22px serif'
         ctx.fillText('Instability', 230, 520)
+        ctx.save()
+
+        ctx.font = '22px serif'
+        ctx.fillText('Zone of Pain', 70, 450)
         ctx.save()
 
         ctx.rotate(-Math.PI / 2)
